--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "version": "0.0.0",
   "type": "module",
   "homepage": "https://Younes-bt.github.io/ksar-data",
-
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -49,6 +48,7 @@
     "gh-pages": "^6.3.0",
     "globals": "^16.3.0",
     "tw-animate-css": "^1.3.6",
-    "vite": "^7.0.4"
+    "vite": "^7.0.4",
+    "vite-plugin-gh-pages": "^1.0.1"
   }
 }
