--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "lint": "eslint .",
     "preview": "vite preview",
     "deploy": "gh-pages -d dist",
-    "predeploy": "npm run build"
+    "predeploy": "GITHUB_PAGES=true npm run build"
   },
   "dependencies": {
     "@headlessui/react": "^2.2.6",
